# A-D_HW_student_db

./: .gitignore  CMakeLists.txt  README.md  benchmark_test.sh  create_smaller_csv.py  sort_bench.sh  studenttest.csv
benchmarks/: benchmark.cpp  sorting_benchmark.cpp
include/: IStudent_db.hpp  db1.hpp  db1_sp.hpp  db2.hpp  db3.hpp  db_1_lm.hpp  db_2_lm.hpp  dp2_sp.hpp  dp_1_lm.hpp  generator.hpp  mysort.hpp  sort_phone.hpp  student.hpp  utils.hpp
results/: memory.csv  ops.csv  plots.ipynb  sort.csv  sorted_10_students.csv  unsorted_10_students.csv
sorting/: mysort.cpp
src/: db1.cpp  db1_sp.cpp  db2.cpp  db3.cpp  db_1_lm.cpp  db_2_lm.cpp  dp2_sp.cpp  dp_1_lm.cpp  generator.cpp  main.cpp  sort_phone.cpp  student.cpp  utils.cpp
